# ai-consultancy-monitor

./: .env.example  .gitignore  Dockerfile  MANIFEST.md  Makefile  README.md  dev.ps1  docker-compose.yml  pyproject.toml
frontend/src/app/: page.tsx
frontend/src/app/companies/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/settings/location/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/layout/: AppSidebar.tsx
src/: worker.py
src/api/: main.py
src/core/: config.py  database.py  exceptions.py  models.py
src/engagement_generator/routers/: engagement.py
src/engagement_generator/services/: angle_generator.py  template_engine.py
src/opportunity_engine/: tasks.py
src/opportunity_engine/models/: opportunity.py
src/opportunity_engine/routers/: opportunities.py
src/opportunity_engine/services/: matcher.py  scorer.py
src/org_diagnosis_ai/: tasks.py
src/org_diagnosis_ai/models/: diagnosis.py
src/org_diagnosis_ai/prompts/: diagnosis_prompts.py
src/org_diagnosis_ai/routers/: diagnosis.py
src/org_diagnosis_ai/services/: classifier.py
src/signal_scanner/: tasks.py
src/signal_scanner/models/: company.py  signal.py
src/signal_scanner/routers/: companies.py  signals.py
src/signal_scanner/services/: change_detector.py  glassdoor_extractor.py  job_scraper.py  news_ingestion.py  signal_normalizer.py
tests/opportunity_engine/: test_scorer.py
tests/org_diagnosis_ai/: test_classifier.py
tests/signal_scanner/: test_signal_normalizer.py
